--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival-profile</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/root.css">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
+    <header class="Poppins">
+        <nav class="d-flex align-items-center">
+
+             <ul class="sidebar">
+                <li onclick="hideSidebar()"><a><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                            fill="#5f6368">
+                            <path
+                                d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                            </svg></a></li>
+                 <li class="event hide">
+                         <img src="./assets/img/logo.png" alt="logo">Events<span class="free">Free</span></li>
+                 <li><a href="#">HOME</a></li>
+                 <li><a href="#">EVENTS</a></li>
+                 <li><a href="#">FEED</a></li>
+                 <li><a href="#">USER NAME</a></li>
+                 <li><a><button class="nav-btn">Log Out</button></a></li>
+             </ul>
+            <ul>
+                <li class="event logo blue-heading">
+                   <img src="./assets/img/logo.png" alt="logo ">Events<span
+                       class="free">Free</span></li>
+                <li class="hide"><a href="#">HOME</a></li>
+                <li class="hide"><a href="#">EVENTS</a></li>
+                <li class="hide"><a href="#">FEED</a></li>
+                <li class="hide"><a href="#">USER NAME</a></li>
+                <li class="hide"><a><button class="nav-btn">Log Out</button></a></li>
+                <li class="menu" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                            width="24px" fill="#5f6368">
+                            <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" /></svg></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
     <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
