--- a/index.html
+++ b/index.html
@@ -13,39 +13,143 @@
 </head>
 
 <body>
-    <header class="Poppins">
-        <nav class="d-flex align-items-center">
+    <header class="Poppins header ">
+        <nav class="d-flex align-items-center ">
 
-             <ul class="sidebar">
-                <li onclick="hideSidebar()"><a><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#5f6368">
+            <ul class="sidebar">
+                <li onclick="hideSidebar()"><a><svg xmlns="http://www.w3.org/2000/svg" height="24px"
+                            viewBox="0 -960 960 960" width="24px" fill="#5f6368">
                             <path
                                 d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
-                            </svg></a></li>
-                 <li class="event hide">
-                         <img src="./assets/img/logo.png" alt="logo">Events<span class="free">Free</span></li>
-                 <li><a href="#">HOME</a></li>
-                 <li><a href="#">EVENTS</a></li>
-                 <li><a href="#">FEED</a></li>
-                 <li><a href="#">USER NAME</a></li>
-                 <li><a><button class="nav-btn">Log Out</button></a></li>
-             </ul>
+                        </svg></a></li>
+                <li class="event hide">
+                    <img src="./assets/img/logo.png" alt="logo">Events<span class="free">Free</span></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">EVENTS</a></li>
+                <li><a href="#">FEED</a></li>
+                <li><a href="#">USER NAME</a></li>
+                <li><a><button class="nav-btn">Log Out</button></a></li>
+            </ul>
             <ul>
-                <li class="event logo blue-heading">
-                   <img src="./assets/img/logo.png" alt="logo ">Events<span
-                       class="free">Free</span></li>
+                <li class="event logo blue-heading ms-3">
+                    <img src="./assets/img/logo.png" alt="logo ">Events<span class="free">Free</span></li>
                 <li class="hide"><a href="#">HOME</a></li>
                 <li class="hide"><a href="#">EVENTS</a></li>
                 <li class="hide"><a href="#">FEED</a></li>
                 <li class="hide"><a href="#">USER NAME</a></li>
-                <li class="hide"><a><button class="nav-btn">Log Out</button></a></li>
-                <li class="menu" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                            width="24px" fill="#5f6368">
+                <li class="hide"><a><button class="nav-btn me-5">Log Out</button></a></li>
+                <li class="menu" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
+                            viewBox="0 -960 960 960" width="24px" fill="#5f6368">
                             <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" /></svg></a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <section class=" section-1 align-items-center justify-content-center mt-5 Poppins">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-12 col-xl-3">
+                    <img src="./assets/img/section-1.png" alt="section-1 image" class="w-100">
+                </div>
+                <div class="col-12 col-xl-9">
+                    <p class="color-grey fs-16 pt-2">Home > Username</p>
+                    <div class="row align-items-center">
+                        <div class="col-12 col-lg-4">
+                            <h3 class="fs-48">Jhone Doe</h3>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <button class="Journey-btn fs-16">Unshow Journey of Feed</button>
+                            <button class="Journey-btna text-white bg-blue ms-3 fs-16">Show Journey of Feed</button>
+                        </div>
+                    </div>
+                    <p class="color-grey pt-2 fs-16 ">Dictumst vulputate eget quisque iaculis hendrerit quis ut
+                        fringilla. Senectus gravida sed
+                        interdum pretium at quam morbi. Nunc, libero nam cursus sem faucibus urna. Hendrerit vulputate
+                        in duis donec sit. Ut vitae dolor fringilla urna eget aliquet.</p>
+<div class=" svg-box d-flex align-items-center">
+  <p class="svg-1">  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g opacity="0.6">
+            <path
+                d="M7 11H9V13H7V11ZM7 15H9V17H7V15ZM11 11H13V13H11V11ZM11 15H13V17H11V15ZM15 11H17V13H15V11ZM15 15H17V17H15V15Z"
+                fill="black" />
+            <path
+                d="M5 22H19C20.103 22 21 21.103 21 20V6C21 4.897 20.103 4 19 4H17V2H15V4H9V2H7V4H5C3.897 4 3 4.897 3 6V20C3 21.103 3.897 22 5 22ZM19 8L19.001 20H5V8H19Z"
+                fill="black" />
+        </g>
+    </svg></p>
+    <p class="color-grey ps-2">10/02/2022</p>
+
+    <p class="svg"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_34717_2293)">
+                <path
+                    d="M19.1998 8.15996C19.1998 14.6899 11.9998 23.04 11.9998 23.04C11.9998 23.04 4.7998 14.8454 4.7998 8.15996C4.7998 4.18316 8.023 0.959961 11.9998 0.959961C15.9761 0.959961 19.1998 4.18316 19.1998 8.15996Z"
+                    stroke="#666666" stroke-width="1.7647" stroke-miterlimit="10" stroke-linejoin="round" />
+                <path
+                    d="M12.0001 11.5198C13.5907 11.5198 14.8801 10.2303 14.8801 8.63977C14.8801 7.04919 13.5907 5.75977 12.0001 5.75977C10.4095 5.75977 9.12012 7.04919 9.12012 8.63977C9.12012 10.2303 10.4095 11.5198 12.0001 11.5198Z"
+                    stroke="#666666" stroke-width="1.7647" stroke-miterlimit="10" stroke-linejoin="round" />
+            </g>
+            <defs>
+                <clipPath id="clip0_34717_2293">
+                    <rect width="24" height="24" fill="white" />
+                </clipPath>
+            </defs>
+        </svg>
+</p>
+    <p class="color-grey ps-2">Mumbai</p>
+    <p class="svg"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_34717_2277)">
+                <path
+                    d="M12 16.5C11.11 16.5 10.24 16.2361 9.49994 15.7416C8.75991 15.2471 8.18314 14.5443 7.84254 13.7221C7.50195 12.8998 7.41283 11.995 7.58647 11.1221C7.7601 10.2492 8.18869 9.44736 8.81802 8.81802C9.44736 8.18869 10.2492 7.7601 11.1221 7.58647C11.995 7.41283 12.8998 7.50195 13.7221 7.84254C14.5443 8.18314 15.2471 8.75991 15.7416 9.49994C16.2361 10.24 16.5 11.11 16.5 12C16.5 13.1935 16.0259 14.3381 15.182 15.182C14.3381 16.0259 13.1935 16.5 12 16.5ZM12 9C11.4067 9 10.8266 9.17595 10.3333 9.50559C9.83994 9.83524 9.45543 10.3038 9.22836 10.852C9.0013 11.4001 8.94189 12.0033 9.05765 12.5853C9.1734 13.1672 9.45912 13.7018 9.87868 14.1213C10.2982 14.5409 10.8328 14.8266 11.4147 14.9424C11.9967 15.0581 12.5999 14.9987 13.1481 14.7716C13.6962 14.5446 14.1648 14.1601 14.4944 13.6667C14.8241 13.1734 15 12.5933 15 12C15 11.2044 14.6839 10.4413 14.1213 9.87868C13.5587 9.31607 12.7957 9 12 9Z"
+                    fill="#666666" />
+                <path
+                    d="M15.75 23.2501H8.25C7.45435 23.2501 6.69129 22.9341 6.12868 22.3715C5.56607 21.8089 5.25 21.0458 5.25 20.2501V18.3376C5.25135 18.1887 5.29701 18.0436 5.38115 17.9207C5.4653 17.7978 5.58413 17.7027 5.7225 17.6476L8.4525 16.5526C8.54504 16.5116 8.64492 16.4897 8.74614 16.4884C8.84736 16.487 8.94781 16.5061 9.04144 16.5445C9.13508 16.583 9.21996 16.64 9.29097 16.7121C9.36198 16.7843 9.41765 16.87 9.45464 16.9643C9.49162 17.0585 9.50914 17.1592 9.50615 17.2604C9.50317 17.3616 9.47973 17.4611 9.43725 17.553C9.39477 17.6449 9.33413 17.7272 9.25898 17.795C9.18384 17.8629 9.09574 17.9148 9 17.9476L6.75 18.8476V20.2501C6.75 20.648 6.90804 21.0295 7.18934 21.3108C7.47064 21.5921 7.85218 21.7501 8.25 21.7501H15.75C16.1478 21.7501 16.5294 21.5921 16.8107 21.3108C17.092 21.0295 17.25 20.648 17.25 20.2501V18.8476L15 17.9476C14.815 17.874 14.6668 17.73 14.5881 17.5471C14.5093 17.3643 14.5064 17.1576 14.58 16.9726C14.6536 16.7877 14.7977 16.6395 14.9805 16.5607C15.1634 16.482 15.37 16.479 15.555 16.5526L18.285 17.6476C18.4234 17.7027 18.5422 17.7978 18.6263 17.9207C18.7105 18.0436 18.7562 18.1887 18.7575 18.3376V20.2501C18.7575 20.6447 18.6797 21.0355 18.5284 21.3999C18.3772 21.7644 18.1555 22.0954 17.8762 22.3741C17.5968 22.6528 17.2652 22.8736 16.9004 23.0239C16.5355 23.1743 16.1446 23.2511 15.75 23.2501Z"
+                    fill="#666666" />
+                <path
+                    d="M6.75 8.25C6.00832 8.25 5.2833 8.03007 4.66661 7.61801C4.04993 7.20596 3.56928 6.62029 3.28545 5.93507C3.00162 5.24984 2.92736 4.49584 3.07206 3.76841C3.21675 3.04098 3.5739 2.3728 4.09835 1.84835C4.6228 1.3239 5.29098 0.966752 6.01841 0.822057C6.74584 0.677362 7.49984 0.751625 8.18506 1.03545C8.87029 1.31928 9.45596 1.79993 9.86801 2.41661C10.2801 3.0333 10.5 3.75832 10.5 4.5C10.5 4.99246 10.403 5.48009 10.2146 5.93507C10.0261 6.39004 9.74987 6.80343 9.40165 7.15165C9.05343 7.49987 8.64004 7.7761 8.18506 7.96455C7.73009 8.15301 7.24246 8.25 6.75 8.25ZM6.75 2.25C6.30499 2.25 5.86998 2.38196 5.49997 2.6292C5.12996 2.87643 4.84157 3.22783 4.67127 3.63896C4.50098 4.0501 4.45642 4.5025 4.54324 4.93896C4.63005 5.37541 4.84434 5.77632 5.15901 6.09099C5.47368 6.40566 5.87459 6.61995 6.31105 6.70677C6.74751 6.79359 7.19991 6.74903 7.61104 6.57873C8.02217 6.40843 8.37358 6.12005 8.62081 5.75004C8.86804 5.38002 9 4.94501 9 4.5C9 3.90327 8.76295 3.33097 8.34099 2.90901C7.91904 2.48705 7.34674 2.25 6.75 2.25Z"
+                    fill="#666666" />
+                <path
+                    d="M6 14.5424H3.75C2.95435 14.5424 2.19129 14.2263 1.62868 13.6637C1.06607 13.1011 0.75 12.3381 0.75 11.5424V10.2299C0.749855 10.0797 0.794816 9.9329 0.879061 9.80854C0.963306 9.68418 1.08295 9.58798 1.2225 9.53241L3.615 8.59491C3.79721 8.52258 4.00049 8.52446 4.18132 8.60016C4.36215 8.67586 4.50615 8.81935 4.5825 8.99991C4.61903 9.09149 4.63715 9.18939 4.63581 9.28798C4.63447 9.38658 4.6137 9.48394 4.57469 9.5745C4.53568 9.66506 4.47919 9.74704 4.40846 9.81575C4.33774 9.88445 4.25415 9.93854 4.1625 9.97491L2.25 10.7399V11.5424C2.25 11.9402 2.40804 12.3218 2.68934 12.6031C2.97064 12.8844 3.35218 13.0424 3.75 13.0424H6C6.19891 13.0424 6.38968 13.1214 6.53033 13.2621C6.67098 13.4027 6.75 13.5935 6.75 13.7924C6.75 13.9913 6.67098 14.1821 6.53033 14.3227C6.38968 14.4634 6.19891 14.5424 6 14.5424Z"
+                    fill="#666666" />
+                <path
+                    d="M17.25 8.25C16.5083 8.25 15.7833 8.03007 15.1666 7.61801C14.5499 7.20596 14.0693 6.62029 13.7855 5.93507C13.5016 5.24984 13.4274 4.49584 13.5721 3.76841C13.7168 3.04098 14.0739 2.3728 14.5984 1.84835C15.1228 1.3239 15.791 0.966752 16.5184 0.822057C17.2458 0.677362 17.9998 0.751625 18.6851 1.03545C19.3703 1.31928 19.956 1.79993 20.368 2.41661C20.7801 3.0333 21 3.75832 21 4.5C21 5.49456 20.6049 6.44839 19.9017 7.15165C19.1984 7.85491 18.2446 8.25 17.25 8.25ZM17.25 2.25C16.805 2.25 16.37 2.38196 16 2.6292C15.63 2.87643 15.3416 3.22783 15.1713 3.63896C15.001 4.0501 14.9564 4.5025 15.0432 4.93896C15.1301 5.37541 15.3443 5.77632 15.659 6.09099C15.9737 6.40566 16.3746 6.61995 16.811 6.70677C17.2475 6.79359 17.6999 6.74903 18.111 6.57873C18.5222 6.40843 18.8736 6.12005 19.1208 5.75004C19.368 5.38002 19.5 4.94501 19.5 4.5C19.5 3.90327 19.2629 3.33097 18.841 2.90901C18.419 2.48705 17.8467 2.25 17.25 2.25Z"
+                    fill="#666666" />
+                <path
+                    d="M20.25 14.5424H18C17.8011 14.5424 17.6103 14.4634 17.4697 14.3228C17.329 14.1821 17.25 13.9913 17.25 13.7924C17.25 13.5935 17.329 13.4028 17.4697 13.2621C17.6103 13.1214 17.8011 13.0424 18 13.0424H20.25C20.6478 13.0424 21.0294 12.8844 21.3107 12.6031C21.592 12.3218 21.75 11.9403 21.75 11.5424V10.7399L19.8375 9.98993C19.7458 9.95356 19.6623 9.89948 19.5915 9.83077C19.5208 9.76206 19.4643 9.68009 19.4253 9.58952C19.3863 9.49896 19.3655 9.4016 19.3642 9.30301C19.3629 9.20441 19.381 9.10652 19.4175 9.01493C19.4896 8.83029 19.6318 8.68169 19.8131 8.60158C19.9943 8.52148 20.2 8.51639 20.385 8.58743L22.7775 9.52493C22.917 9.58051 23.0367 9.67671 23.1209 9.80107C23.2052 9.92543 23.2501 10.0722 23.25 10.2224V11.5349C23.251 11.9295 23.1741 12.3204 23.0238 12.6853C22.8735 13.0501 22.6526 13.3817 22.374 13.6611C22.0953 13.9405 21.7643 14.1621 21.3998 14.3134C21.0353 14.4646 20.6446 14.5424 20.25 14.5424Z"
+                    fill="#666666" />
+            </g>
+            <defs>
+                <clipPath id="clip0_34717_2277">
+                    <rect width="24" height="24" fill="white" />
+                </clipPath>
+            </defs>
+        </svg>
+</p>
+    <p class="color-grey ps-2">1,080</p>
+    <p class="svg"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M20.7104 3.71019C20.6174 3.80391 20.5068 3.87831 20.385 3.92908C20.2631 3.97985 20.1324 4.00598 20.0004 4.00598C19.8684 4.00598 19.7377 3.97985 19.6158 3.92908C19.4939 3.87831 19.3833 3.80391 19.2904 3.71019L19.0004 3.41019L12.9004 9.52019L10.0004 20.2602C9.94178 20.4783 9.81104 20.6702 9.62946 20.8046C9.44788 20.939 9.22615 21.0079 9.00038 21.0002C8.79074 21.0007 8.58623 20.9354 8.41575 20.8133C8.24528 20.6913 8.11747 20.5188 8.05038 20.3202L6.21038 14.7902L0.680383 13.0002C0.473403 12.9306 0.294885 12.7952 0.172097 12.6146C0.0493098 12.434 -0.0109986 12.2183 0.000383396 12.0002C-0.00734984 11.7744 0.0615832 11.5527 0.195955 11.3711C0.330327 11.1895 0.522222 11.0588 0.740383 11.0002L11.4804 8.10019L17.5904 2.00019L17.2904 1.71019C17.1021 1.52188 16.9963 1.26649 16.9963 1.00019C16.9963 0.733884 17.1021 0.478489 17.2904 0.290185C17.4787 0.101882 17.7341 -0.00390625 18.0004 -0.00390625C18.2667 -0.00390625 18.5221 0.101882 18.7104 0.290185L20.7104 2.29019C20.8041 2.38315 20.8785 2.49375 20.9293 2.61561C20.98 2.73747 21.0062 2.86817 21.0062 3.00019C21.0062 3.1322 20.98 3.2629 20.9293 3.38476C20.8785 3.50662 20.8041 3.61722 20.7104 3.71019Z"
+                fill="#666666" />
+        </svg>
+</p>
+    <p class="color-grey ps-2">1,080</p>
+    <p class="svg"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M20.0625 6.8999H3.9375C3 6.8999 2.25 7.6499 2.25 8.5874V15.4499C2.25 16.3874 3 17.1374 3.9375 17.1374H20.0625C21 17.1374 21.75 16.3874 21.75 15.4499V13.7249C21.75 13.5374 21.6 13.3499 21.4125 13.3499C20.7 13.2749 20.2125 12.7124 20.2125 12.0374C20.2125 11.3624 20.7375 10.7999 21.4125 10.7249C21.6 10.7249 21.75 10.5374 21.75 10.3499V8.6249C21.75 7.6499 21 6.8999 20.0625 6.8999ZM21 10.0124C20.1 10.2374 19.425 11.0624 19.425 11.9999C19.425 12.9374 20.0625 13.7624 21 13.9874V15.4124C21 15.9374 20.5875 16.3499 20.0625 16.3499H16.95V15.4124C16.95 15.1874 16.8 15.0374 16.575 15.0374C16.35 15.0374 16.2 15.1874 16.2 15.4124V16.3499H3.9375C3.4125 16.3499 3 15.9374 3 15.4124V8.5874C3 8.0624 3.4125 7.6499 3.9375 7.6499H16.2V8.5874C16.2 8.8124 16.35 8.9624 16.575 8.9624C16.8 8.9624 16.95 8.8124 16.95 8.5874V7.6499H20.0625C20.5875 7.6499 21 8.0624 21 8.5874V10.0124Z"
+                fill="#666666" />
+            <path
+                d="M16.5752 10.5C16.3502 10.5 16.2002 10.65 16.2002 10.875V13.125C16.2002 13.35 16.3502 13.5 16.5752 13.5C16.8002 13.5 16.9502 13.35 16.9502 13.125V10.875C16.9502 10.65 16.7627 10.5 16.5752 10.5Z"
+                fill="#666666" />
+        </svg>
+</p>
+    <p class="color-grey ps-2">1,080</p>
+
+</div>
+   </div>
+            </div>
+        </div>
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
