--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                             <h3 class="fs-xl">Jhone Doe</h3>
                         </div>
                         <div class="col-12 col-lg-8">
-                            <button class="Journey-btn fs-md">Unshow Journey of Feed</button>
-                            <button class="Journey-btna text-white bg-blue ms-3 fs-md">Show Journey of Feed</button>
+                            <button class="Journey-btn fs-md fw-600">Unshow Journey of Feed</button>
+                            <button class="Journey-btna text-white bg-blue fs-md fw-600">Show Journey of
+                                Feed</button>
                         </div>
                     </div>
                     <p class="color-grey pt-2 fs-md dictumst-para">Dictumst vulputate eget quisque iaculis hendrerit
@@ -69,7 +70,7 @@
                         interdum pretium at quam morbi. Nunc, libero nam cursus sem faucibus urna. Hendrerit vulputate
                         in duis donec sit. Ut vitae dolor fringilla urna eget aliquet.</p>
                     <div class=" svg-box d-flex align-items-center">
-                        <p class="svg-1"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        <p class="svg-1"> <svg  width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <g opacity="0.6">
                                     <path
@@ -159,7 +160,7 @@
 
     </section>
 
-    <section class="section-2 d-flex align-items-center justify-content-center Poppins">
+    <section class="section-2 d-flex align-items-center justify-content-center Poppins mb-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
@@ -248,7 +249,10 @@
                     </defs>
                 </svg>
                 <input type="text" placeholder="Add a new comment" id="comment" class="">
-                <button class="post-btn position-absolute text-white ">Post Comment</button>
+                <button class="post-btn position-absolute text-white ">Post Comment</button><button
+                    class="position-absolute done svg-btn"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
+                        viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                        <path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z" /></svg></button>
             </label>
             <div class="d-flex align-items-start">
                 <img src="./assets/img/svg-2.svg" alt="svg-2" class="mt-4 ">
@@ -261,7 +265,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -273,8 +277,8 @@
                         fringilla.</p>
                 </div>
             </div>
-            <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+            <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center ">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -288,7 +292,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -303,7 +307,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -319,7 +323,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -335,7 +339,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
 
@@ -351,7 +355,7 @@
                 </div>
             </div>
             <p class="color-grey ms-5 ps-4 mt-3 d-flex align-items-center">
-                <img src="./assets/img/delete-img.png" alt="delete" class="me-2">
+                <img src="./assets/img/delete-img.png" alt="delete" class="me-2 pointer">
                 Remove Comment
             </p>
         </div>
@@ -453,7 +457,7 @@
                                 </div>
 
                                 <div class="col-4">
-                                    <div class="footer-box fs-12 fw-700 d-flex align-items-center justify-content-center text-white">Show<br>More</div>
+                                    <div class="footer-box fs-12 fw-700 d-flex align-items-center justify-content-center text-white pointer">Show<br>More</div>
                                 </div>
                             </div>
                         </div>
