--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#">EVENTS</a></li>
                 <li><a href="#">FEED</a></li>
                 <li><a href="#">USER NAME</a></li>
-                <li><a><button class="nav-btn">Log Out</button></a></li>
+                <li><button class="nav-btn">Log Out</button></li>
             </ul>
             <ul>
                 <li class="event logo blue-heading ms-3">
@@ -200,7 +200,7 @@
                     <rect x="0.608398" width="114.392" height="8" fill="#01C8FF" />
                     <rect width="101.005" height="8" fill="#2C49FE" />
                 </svg>
-                <h2 class="fs-xl">Gallery</h2>
+                <h2 class="fs-xl mb-5">Gallery</h2>
             </div>
             <div class="row">
                 <div class="grid-box">
@@ -367,9 +367,9 @@
                 <div class="col-12 col-lg-4">
                     <p class="event blue-heading"><img src="./assets/img/logo.png" alt="logo">Event<span
                             class="free">free</span></p>
-                    <p class="text-white fs-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur
+                    <p class="text-white fs-sm footer-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur
                         urna in dictum suscipit.
-                        Suspendisse maximus ipsum sem. c </p>
+                        Suspendisse maximus ipsum sem. </p>
 
                     <p class="d-flex align-items-center">
                         <a href="https://www.instagram.com/" target="_blank"><svg width="23" height="23"
