--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header class="Poppins header ">
+        <div class="container">
         <nav class="d-flex align-items-center ">
 
             <ul class="sidebar">
@@ -24,26 +25,27 @@
                         </svg></a></li>
                 <li class="event hide">
                     <img src="./assets/img/logo.png" alt="logo">Events<span class="free">Free</span></li>
-                <li><a href="#">HOME</a></li>
+                <li><a href="#">HOME</a></li> 
                 <li><a href="#">EVENTS</a></li>
                 <li><a href="#">FEED</a></li>
                 <li><a href="#">USER NAME</a></li>
                 <li><button class="nav-btn">Log Out</button></li>
             </ul>
             <ul>
-                <li class="event logo blue-heading ms-3">
+                <li class="event logo blue-heading">
                     <img src="./assets/img/logo.png" alt="logo ">Events<span class="free">Free</span></li>
                 <li class="hide"><a href="#">HOME</a></li>
                 <li class="hide"><a href="#">EVENTS</a></li>
                 <li class="hide"><a href="#">FEED</a></li>
                 <li class="hide"><a href="#">USER NAME</a></li>
-                <li class="hide"><a><button class="nav-btn me-5">Log Out</button></a></li>
+                <li class="hide"><a><button class="nav-btn">Log Out</button></a></li>
                 <li class="menu" onclick=showSidebar()><svg xmlns="http://www.w3.org/2000/svg" height="24px"
                         viewBox="0 -960 960 960" width="24px" fill="#5f6368">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" /></svg>
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <section class=" section-1 align-items-center justify-content-center my-5 Poppins">
